html_basic/index.html

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,8 +5,25 @@
     </head>
    
     <body>
-        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">This quote hit me hard. <a href="https://t.co/oYKQG4SMSe">pic.twitter.com/oYKQG4SMSe</a></p>&mdash; Wakeup People (@WakeupPeopIe) <a href="https://twitter.com/WakeupPeopIe/status/1803096540028023070?ref_src=twsrc%5Etfw">June 18, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+       
+      <header>
+        <ul>
+        <li><a href="index.html">tested</a></li>
+        <li><a href="index.html">proved</a></li>
+        <li><a href="tweets.html">trusted</a></li>
+        </ul>
+      </header>  
+      <main>
+        <article>
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">This quote hit me hard. <a href="https://t.co/oYKQG4SMSe">pic.twitter.com/oYKQG4SMSe</a></p>&mdash; Wakeup People (@WakeupPeopIe) <a href="https://twitter.com/WakeupPeopIe/status/1803096540028023070?ref_src=twsrc%5Etfw">June 18, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <a href="/index.html">take me back to homepage</a>
-        
+        </article>
+        <aside>
+            placeholder to add comment thread later.
+        </aside>
+      </main>
+      <footer>
+        <p>made by Chikwado ezemma <a href="https://intranet.alxswe.com/corrections/34916720/correct" target="_blank">here</a></p>
+      </footer>
     </body>
 </html>
