--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,6 +14,25 @@
         <h3>wealth</h3>
         <h4> blogging</h4>
         <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07 image" /></a>
-
+        <a href="tweets.html">open to see tweet</a>
+        <header>
+            <ul>
+            <li><a href="index.html">tested</a></li>
+            <li><a href="index.html">proved</a></li>
+            <li><a href="tweets.html">trusted</a></li>
+            </ul>
+        </header>  
+        <main>
+          <article>
+              <blockquote class="twitter-tweet"><p lang="en" dir="ltr">This quote hit me hard. <a href="https://t.co/oYKQG4SMSe">pic.twitter.com/oYKQG4SMSe</a></p>&mdash; Wakeup People (@WakeupPeopIe) <a href="https://twitter.com/WakeupPeopIe/status/1803096540028023070?ref_src=twsrc%5Etfw">June 18, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <a href="/index.html">take me back to homepage</a>
+          </article>
+          <aside>
+              placeholder to add comment thread later.
+          </aside>
+        </main>
+        <footer>
+          <p>made by Chikwado ezemma <a href="https://intranet.alxswe.com/corrections/34916720/correct" target="_blank">here</a></p>
+        </footer>
     </body>
 </html>
