--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,6 +26,38 @@
           <article>
               <blockquote class="twitter-tweet"><p lang="en" dir="ltr">This quote hit me hard. <a href="https://t.co/oYKQG4SMSe">pic.twitter.com/oYKQG4SMSe</a></p>&mdash; Wakeup People (@WakeupPeopIe) <a href="https://twitter.com/WakeupPeopIe/status/1803096540028023070?ref_src=twsrc%5Etfw">June 18, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           <a href="/index.html">take me back to homepage</a>
+          <table>
+            <thead>
+                <tr>
+                    <th>NAME</th>
+                    <th>AGE</th>
+                    <th>COUNTRY</th>
+                </tr>
+
+            </thead>
+            <tbody>
+                <tr>
+                    <td>John</td>
+                    <td>25</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>Emily</td>
+                    <td>28</td>
+                    <td>Canada</td>
+                </tr>
+                <tr>
+                    <td>Michael</td>
+                    <td>32</td>
+                    <td>Austria</td>
+                </tr>
+                <tr>
+                    <td>Sophia</td>
+                    <td>21</td>
+                    <td>UK</td>
+                </tr>
+            </tbody>
+          </table>
           </article>
           <aside>
               placeholder to add comment thread later.
