html_basic/index.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,7 +26,7 @@
           <article>
               <blockquote class="twitter-tweet"><p lang="en" dir="ltr">This quote hit me hard. <a href="https://t.co/oYKQG4SMSe">pic.twitter.com/oYKQG4SMSe</a></p>&mdash; Wakeup People (@WakeupPeopIe) <a href="https://twitter.com/WakeupPeopIe/status/1803096540028023070?ref_src=twsrc%5Etfw">June 18, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           <a href="/index.html">take me back to homepage</a>
-          <table>
+          <table style="border: 1px solid;">
             <thead>
                 <tr>
                     <th>NAME</th>
