--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,12 @@
         <p>do not open this page if you are not above 18+</p>
     </header>
     <nav>
-
+        <ul>
+            <li><a href="index.html">Introduction</a></li>
+            <li><a href="index.html">Project</a></li>
+            <li><a href="index.html">About Me</a></li>
+            <li><a href="index.html">Contact</a></li>
+        </ul>
     </nav>
     <section>
 
