portfolio/index.html

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,18 @@
             <li><a href="index.html">Contact</a></li>
         </ul>
     </nav>
-    <section>
+    <section id="introduction">
+        <h2>Introduction</h2>
+        <p>my name is dickson a student of alx, currently into the front end program</p>
+
+    </section>
+    <section id="project">
+        <h2>Projects</h2>
+        <article>
+            <h3>TESTED</h3>
+            <p>high speed on download</p>
+            <a href="https://github.com/Chikwado626/githubCloneProject/blob/7ae8b37b485336521918f680a773a494c3040da2/feature.txt"target= "blank">press here</a>
+        </article>
 
     </section>
     <article>
