--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,19 +33,20 @@
         </article>
 
     </section>
-    <section id="about me">
+    <section id="about">
         <h2>About me</h2>
 
     </section>
     <section id="Contact">
         <h2>Contact</h2>
-        <a href="https://www.linkedin.com/in/chikwado-ezemma?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BXWeI%2BMkyRHC%2BXpFfct8ftA%3D%3D"target="-blank">click here</a>
+        <a href="https://www.linkedin.com/in/chikwado-ezemma?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BXWeI%2BMkyRHC%2BXpFfct8ftA%3D%3D"target="blank">click here</a>
     </section>
     <article>
 
     </article>
     <footer>
-        <p>copy 2024 chikwado </p>
+        <p>copy right property</p>
+        <copy>Chikwado</copy>
     </footer>
 </body>
 
