portfolio/index.html

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,15 +35,16 @@
     </section>
     <section id="about">
         <h2>About me</h2>
+        <p>i love to coding</p>
 
     </section>
-    <section id="Contact">
+    <section id="contact">
         <h2>Contact</h2>
         <a href="https://www.linkedin.com/in/chikwado-ezemma?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BXWeI%2BMkyRHC%2BXpFfct8ftA%3D%3D"target="blank">click here</a>
     </section>
     
     <footer>
-        <p>&copy;copyright property</p>
+        <p>&copy;2024 chikwado ezemma</p>
         
     </footer>
 </body>
