--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,7 @@
         <p>my name is dickson a student of alx, currently into the front end program</p>
 
     </section>
-    <section id="project">
+    <section id="projects">
         <h2>Projects</h2>
         <article>
             <h3>TESTED</h3>
@@ -34,12 +34,13 @@
 
     </section>
     <section id="about">
-        <h2>About me</h2>
-        <p>i love to coding</p>
+        <h2>About Me</h2>
+        <p>i love to code</p>
 
     </section>
     <section id="contact">
         <h2>Contact</h2>
+        <a href="mailto:chikwadoezemma@gmail.com">email me</a>
         <a href="https://www.linkedin.com/in/chikwado-ezemma?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BXWeI%2BMkyRHC%2BXpFfct8ftA%3D%3D"target="blank">click here</a>
     </section>
     
