--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -4,7 +4,7 @@
         <title>My_first Portfolio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="base.css" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
     </head>
    
     <body class="works_on_smartphone">
