--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -3,7 +3,7 @@
     <head>
         <title>My First embed</title>
     </head>
-   
+    <link href="styles.css" rel="stylesheet">
     <body>
        
       <header>
