css_advanced/styles.css

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -63,7 +63,7 @@
             </div>
         </section>
         <section class="secondsection">
-            <div>
+            <div class="secondsection_container">
                 <div class="secondsection_image">
                     <img src="./assets/5.png" alt="">
 
@@ -75,20 +75,19 @@
                     <P>weather presenter</P>
                 </div>
         </section>
-        <section class="thirdsection">
-            <h2>Most <span>tutorials</span> </h2>
-
-            <div class="thirdsection_div">
-
-                <img src="./assets/9.png" alt="">
-                <h3>Diagonal Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <div class="thirdsection_div_2">
-                        <img class="starImg" src="./assets/1.png" alt="">
+        <section class="videos_list">
+            <h2>Most <span>popular</span> tutorials</h2>
+            <div class="video_cards_container">
+                <div class="video_card">
+                    <button id="playBTN"></button>
+                    <img src="./assets/9.png" alt="" class="video_list_video">
+                    <h3>Diagonal Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="./assets/1.png" alt="">
                         <h4>Phillip Massey</h4>
                     </div>
-                    <div class="star">
+                    <div class="stars">
                         <div><i class="fa-solid fa-star"></i></div>
                         <div><i class="fa-solid fa-star"></i></div>
                         <div><i class="fa-solid fa-star"></i></div>
@@ -97,88 +96,92 @@
                     </div>
                     <p>8 min</p>
                 </div>
-                <div>
+                <div class="video_card">
+                    <button id="playBTN"></button>
+                    <img src="./assets/7.png" alt="" class="video_list_video">
+                    <h3>Happy Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div>
-                        <img src="./assets/7.png" alt="">
-                        <h3>Sad Smile</h3>
-                        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                        <div class="thirdsection_div_2">
-
-                            <img class="starImg" src="./assets/1.png" alt="">
-                            <h4>Phillip Massey</h4>
-                        </div>
-                        <div class="star">
-
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                        </div>
-                        <p>8 min</p>
+                        <img src="./assets/1.png" alt="">
+                        <h4>Phillip Massey</h4>
                     </div>
+                    <div class="stars">
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <p>8 min</p>
+                </div>
+                <div class="video_card">
+                    <button id="playBTN"></button>
+                    <img src="./assets/8.png" alt="" class="video_list_video">
+                    <h3>Natural Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div>
-
-                        <img src="./assets/8.png" alt="">
-                        <h3>Natural Smile</h3>
-                        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                        <div class="thirdsection_div_2">
-                            <img class="starImg" src="./assets/1.png" alt="">
-                            <h4>Phillip Massey</h4>
-                        </div>
-                        <div class="star">
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                        </div>
-                        <p>8 min</p>
+                        <img src="./assets/1.png" alt="">
+                        <h4>Phillip Massey</h4>
                     </div>
+                    <div class="stars">
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <p>8 min</p>
+                </div>
+                <div class="video_card">
+                    <button id="playBTN"></button>
+                    <img src="./assets/6.png" alt="" class="video_list_video">
+                    <h3>Sad Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div>
-                        <img src="./assets/6.png" alt="">
-                        <h3>Happy Smile</h3>
-                        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                        <div class="thirdsection_div_2">
-                            <img class="starImg" src="./assets/1.png" alt="">
-                            <h4>Phillip Massey</h4>
-                        </div>
-                        <div class="star">
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                        </div>
-                        <p>8 min</p>
+                        <img src="./assets/1.png" alt="">
+                        <h4>Phillip Massey</h4>
                     </div>
+                    <div class="stars">
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <p>8 min</p>
+                </div>
+            </div>
+                  
         </section>
-        <section fourth_section>
-            <div class="fourth_section_div">
-                <h2><span>Free</span> membership </h2>
-                <div class="fourth_section_div_two">
-                    <div class="membership">
-                        <img src="./assets/smile.png" alt="smile">
-                        <h3>Lorem Ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="fourth_section_div_two">
-                        <img src="./assets/smile.png" alt="smile">
-                        <h3>Lorem Ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="fourth_section_div_two">
-                        <img src="./assets/smile.png" alt="smile">
-                        <h3>Lorem Ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="fourth_section_div_two">
-                        <img src="./assets/smile.png" alt="smile">
-                        <h3>Lorem Ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                    <button class="button">REGISTER FOR FREE</button>
-        </section>
+        <section id="membership-section">
+            <div class="membership-div">
+              <h2><span>Free</span> membership</h2>
+              <div class="membership-cards-container">
+                <div class="membership-cards">
+                  <img src="./assets/smile.png" alt="">
+                  <h3>Lorem Ipsum</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="membership-cards">
+                  <img src="./assets/smile.png" alt="">
+                  <h3>Lorem Ipsum</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="membership-cards">
+                  <img src="./assets/smile.png" alt="">
+                  <h3>Lorem Ipsum</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="membership-cards">
+                  <img src="./assets/smile.png" alt="">
+                  <h3>Lorem Ipsum</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+              </div>
+              
+            </div>
+            <button class="register-button">REGISTER FOR FREE</button>
+          </section>
         <section class="faq">
             <h2>F.A.Q</h2>
             <div class="faq_div">
